--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "main.js",
   "scripts": {
     "dev": "vite",         
-    "build": "vite build",  
+    "build": "vite build", 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist", 
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
