--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.9.1"
   },
   "devDependencies": {
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "gh-pages": "^6.1.1"
   }
 }
