--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.5.4",
   "main": "main.js",
   "scripts": {
-    "dev": "vite",         
-    "build": "vite build", 
+    "dev": "vite",
+    "build": "vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist", 
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
-  "repository": { "type": "git", "url": "git+https://github.com/Astrazo/athena.git" },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Astrazo/athena.git"
+  },
   "license": "ISC",
-
   "dependencies": {
-    "firebase": "^11.9.1"
   },
   "devDependencies": {
-    "vite": "^6.3.5",
-    "gh-pages": "^6.1.1"
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "gh-pages": "^6.1.1",
+    "vite": "^6.3.5"
   }
 }
